--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.myPrimaryBtn {
+  @apply bg-blue-500 text-white hover:bg-blue-300 hover:text-slate-800 transition-all duration-300;
+}
