--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 .myPrimaryBtn {
-  @apply bg-blue-500 text-white hover:bg-blue-300 hover:text-slate-800 transition-all duration-300;
+  @apply bg-blue-500 text-white hover:bg-blue-700 transition-all duration-300;
 }
 
 .activeRoute {
