--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,9 @@
 .myPrimaryBtn {
   @apply bg-blue-500 text-white hover:bg-blue-700 transition-all duration-300;
 }
+.myOutlineBtn {
+  @apply border-2 border-blue-700 hover:bg-blue-700 hover:text-white transition-all duration-300;
+}
 
 .activeRoute {
   @apply border-b-2 border-blue-500;
